--- a/github/workflows/action.yml
+++ b/github/workflows/action.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI/CD Pipeline
+name: action
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
@@ -21,3 +21,4 @@ jobs:
 
       - name: Build and Test with Maven
         run: mvn clean install
+
