--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -13,7 +12,7 @@
 	<artifactId>webbservice-and-awsserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>webbservice-and-awsserver</name>
-	<description>En webbtjänst</description>
+	<description> En webbtjänst</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
